groups page linkink with backend completed

--- a/pages/groups.html
+++ b/pages/groups.html
@@ -131,7 +131,7 @@
                             <input type="text" class="form-control bondBox search" id="groupName2"
                                 placeholder="Enter group name...">
                         </div>
-                        <button type="button" class="btn btn-primary bondBox" onclick="addGroup(this.value)">Add</button>
+                        <button type="button" class="btn btn-primary bondBox" onclick="addGroup(1)">Add</button>
                     </form>
                 </div>
             </div>
