--- a/pages/login.html
+++ b/pages/login.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" type="text/css" media="screen" href="../Assets/stylesheets/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="../Assets/stylesheets/custom.sass">
     <link rel="stylesheet" type="text/css" media="screen" href="../Assets/stylesheets/_variables.scss">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
@@ -23,7 +24,7 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <!-- <script src="../Assets/JS/main.js"></script> -->
-    
+
     <script src="../Assets/JS/notification.js"></script>
 </head>
 
@@ -63,22 +64,23 @@
 
             <p class="hint-text">Sign in with your social media account</p>
             <div class="social-btn text-center">
-                
-                <a href="#" class="btn btn-primary btn-lg" title="Facebook"><i class="fa fa-facebook" style="color:white;"></i></a>
+
+                <a href="#" class="btn btn-primary btn-lg" title="Facebook"><i class="fa fa-facebook"></i></a>
                 <a href="#" class="btn btn-danger btn-lg" title="Google"><i class="fa fa-google"></i></a>
             </div>
             <div class="or-seperator"><b>or</b></div>
 
             <div class="form-group">
-                <input type="email" class="form-control input-lg" name="email" id="email" placeholder="Enter Your E-mail"
-                    required="required">
+                <input type="email" class="form-control input-lg" name="email" id="email"
+                    placeholder="Enter Your E-mail" required="required">
             </div>
             <div class="form-group">
-                <input type="password" class="form-control input-lg" name="password" id="password" placeholder="Password"
-                    required="required">
+                <input type="password" class="form-control input-lg" name="password" id="password"
+                    placeholder="Password" required="required">
             </div>
             <div class="form-group">
-                <button type="button" id="login_btn" class="btn btn-success btn-lg btn-block signup-btn">Sign in</button>
+                <button type="button" id="login_btn" class="btn btn-success btn-lg btn-block signup-btn">Sign
+                    in</button>
             </div>
             <div class="text-center small"><a href="#">Forgot Your password?</a></div>
             <div class="or-seperator"></div>
