--- a/pages/userHome.html
+++ b/pages/userHome.html
@@ -23,7 +23,7 @@
         crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="../Assets/JS/main.js"></script>
+    <script src="../Assets/JS/auth.js"></script>
     <script src="../Assets/JS/notification.js"></script>
 </head>
 
@@ -47,7 +47,7 @@
                         <a class="nav-link" href="groups.html">Groups</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="#">Orders</a>
+                        <a class="nav-link " href="Orders.html">Orders</a>
                     </li>
                 </ul>
 
@@ -85,11 +85,10 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdownMenuLink"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            User Name
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                             <a class="dropdown-item" href="#">Change Photo</a>
-                            <a class="dropdown-item" href="login.html">Log Out</a>
+                            <a class="dropdown-item" id="logOut" href="">Log Out</a>
                         </div>
                     </li>
                 </ul>
