--- a/pages/friends.html
+++ b/pages/friends.html
@@ -134,7 +134,7 @@
                                                 <div class="list-friend" id="friendList">
                                                     <h4>Friends List</h4>
                                                     <script>
-                                                        displayUserFriendsInSelect(1);
+                                                        displayUserFriendsInSelect(Uid);
                                                     </script>
                                                 </div>
                                             </div>
