--- a/pages/Orders.html
+++ b/pages/Orders.html
@@ -23,7 +23,6 @@
         crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="../Assets/JS/main.js"></script>
     <script src="../Assets/JS/notification.js"></script>
     <script src="../Assets/JS/browseImage.js"></script>
     <title>Orders</title>
@@ -105,7 +104,7 @@
                 <div class="table-title">
                     <div class="row">
                         <div class="col-sm-8">
-                            <h2>Order <b>Details</b></h2>
+                            <h2>Orders <b>List</b></h2>
                         </div>
 
                         <div class="col-sm-4">
