importing navbar & add sign up validation

--- a/pages/Orders.html
+++ b/pages/Orders.html
@@ -23,81 +23,19 @@
         crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-        <script src="../Assets/JS/auth.js"></script>
-        <script src="../Assets/JS/notification.js"></script>
+    <script src="../Assets/JS/auth.js"></script>
     <script src="../Assets/JS/browseImage.js"></script>
+    <script src="../Assets/JS/nav.js"></script>
+
     <title>Orders</title>
 </head>
 
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="userHome.html">Yalla-Notlob</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav" style="width: 100%;">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="friends.html">Friends</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="groups.html">Groups</a>
-                    </li>
-                    <li class="nav-item">
-                            <a class="nav-link " href="Orders.html">Orders</a>
-                        </li>
-                </ul>
+    <!-- navbar -->
 
-                <!-- notification  -->
-                <ul class="notifit">
-                    <li id="noti_Container">
-                        <div id="noti_Counter"></div>
-                        <!--SHOW NOTIFICATIONS COUNT.-->
+    <header id="nav"></header>
 
-                        <!--A CIRCLE LIKE BUTTON TO DISPLAY NOTIFICATION DROPDOWN.-->
-                        <div id="noti_Button"></div>
-
-                        <!--THE NOTIFICAIONS DROPDOWN BOX.-->
-                        <div id="notifications">
-                            <h3>Notifications</h3>
-                            <div style="height:300px;">
-
-                            </div>
-                            <!-- <div class="seeAll"><a href="#">See All</a></div> -->
-                        </div>
-                    </li>
-                </ul>
-
-
-                <!-- notification  -->
-
-
-                <ul class="nav navbar-nav navbar-right profile">
-
-                    <li>
-                        <div class="inset">
-                            <img src="http://rs775.pbsrc.com/albums/yy35/PhoenyxStar/link-1.jpg~c200">
-                        </div>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdownMenuLink"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            User Name
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <a class="dropdown-item" href="#">Change Photo</a>
-                            <a class="dropdown-item" id="logOut" href="">Log Out</a>
-                        </div>
-                    </li>
-                </ul>
-
-            </div>
-
-        </nav>
-
-    </header>
+    <!-- navbar -->
 
     <div class="container col-md-5 ">
         <div class="jumbotron bondBox">
