--- a/pages/userHome.html
+++ b/pages/userHome.html
@@ -25,6 +25,7 @@
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="../Assets/JS/main.js"></script>
     <script src="../Assets/JS/notification.js"></script>
+    <script src="../Assets/JS/userHome.js"></script>
 </head>
 
 <body>
@@ -115,13 +116,13 @@
                             <script>
                                 displayUserOrders(1);// send user id instead of 1
                             </script>
-                            <li class="list-group-item">
+                            <!-- <li class="list-group-item">
                                 <a href="">Lunch on 1/1/2019</a>
                             </li>
 
                             <li class="list-group-item">
                                 <a href="">Breakfast on 2/2/2019</a>
-                            </li>
+                            </li> -->
                         </ul>
                     </div>
                 </div>
