--- a/pages/Orders.html
+++ b/pages/Orders.html
@@ -109,8 +109,9 @@
                         </div>
 
                         <div class="col-sm-4">
-                            <button type="button" class="btn btn-info add-new"><i class="fa fa-plus"></i> Add New
-                                Order</button>
+                            <a href="Addorder.html">
+                                <button class='btn btn-primary pullight'>Add New Order</button>
+                            </a>
                         </div>
                     </div>
                 </div>
