add tokens to session

--- a/pages/login.html
+++ b/pages/login.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>YallaNotlob</title>
+    <div id="headLinks">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="../Assets/stylesheets/main.css">
     <link rel="stylesheet" type="text/css" media="screen" href="../Assets/stylesheets/bootstrap.css">
@@ -26,6 +27,7 @@
     <!-- <script src="../Assets/JS/main.js"></script> -->
 
     <script src="../Assets/JS/notification.js"></script>
+</div>
 </head>
 
 <header>
