--- a/functions/header.html
+++ b/functions/header.html
@@ -60,7 +60,7 @@
         </ul>
 
     </div>
-
+    <script src="../Assets/JS/auth.js"></script>
     <script src="../Assets/JS/notification.js"></script>
 
 
