--- a/pages/Orders.html
+++ b/pages/Orders.html
@@ -26,6 +26,7 @@
     <script src="../Assets/JS/auth.js"></script>
     <script src="../Assets/JS/browseImage.js"></script>
     <script src="../Assets/JS/nav.js"></script>
+    <script src="../Assets/JS/orders.js"></script>
 
     <title>Orders</title>
 </head>
@@ -67,39 +68,9 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr class="table-success">
-                            <th scope="row">1</th>
-                            <td>Breakfast</td>
-                            <td>Shabrawy</td>
-                            <td>10</td>
-                            <td>5</td>
-                            <td>waiting</td>
-                            <td>
-                                <a class="view" title="View" data-toggle="tooltip"><i
-                                        class="material-icons">&#xE417;</i></a>
-                                <a class="finish" title="Finish" data-toggle="tooltip"><i
-                                        class="material-icons">&#xE03B;</i></a>
-                                <a class="delete" title="Cancel" data-toggle="tooltip"><i
-                                        class="material-icons">&#xE872;</i></a>
-                            </td>
-                        </tr>
-
-                        <tr class="table-info">
-                            <th scope="row">2</th>
-                            <td>Lunch</td>
-                            <td>Mac</td>
-                            <td>7</td>
-                            <td>3</td>
-                            <td>finished</td>
-                            <td>
-                                <a class="view" title="View" data-toggle="tooltip"><i
-                                        class="material-icons">&#xE417;</i></a>
-                                <a class="finish" title="Finish" data-toggle="tooltip"><i
-                                        class="material-icons">&#xE03B;</i></a>
-                                <a class="delete" title="Cancel" data-toggle="tooltip"><i
-                                        class="material-icons">&#xE872;</i></a>
-                            </td>
-                        </tr>
+                        <script>
+                            addOrderToHtml();
+                        </script>
                     </tbody>
                 </table>
             </div>
