adding authentication try

--- a/pages/userHome.html
+++ b/pages/userHome.html
@@ -28,6 +28,8 @@
     <script src="../Assets/JS/userHome.js"></script>
     <script src="../Assets/JS/nav.js"></script>
 
+    <script> var access = sessionStorage.getItem("axs");</script>
+
 </head>
 
 <body>
