--- a/pages/userHome.html
+++ b/pages/userHome.html
@@ -28,7 +28,7 @@
     <script src="../Assets/JS/userHome.js"></script>
     <script src="../Assets/JS/nav.js"></script>
 
-    <script> var access = sessionStorage.getItem("axs");</script>
+    <!-- <script> var access = sessionStorage.getItem("axs");</script> -->
 
 </head>
 
@@ -52,7 +52,7 @@
                     <div class="panel-body">
                         <ul class="list-group" id='userOrders'>
                             <script>
-                                displayUserOrders(1);// send user id instead of 1
+                                displayUserOrders(5);// send user id instead of 1
                             </script>
                             <!-- <li class="list-group-item">
                                 <a href="">Lunch on 1/1/2019</a>
