--- a/pages/userHome.html
+++ b/pages/userHome.html
@@ -52,15 +52,8 @@
                     <div class="panel-body">
                         <ul class="list-group" id='userOrders'>
                             <script>
-                                displayUserOrders(5);// send user id instead of 1
+                                displayUserOrders(Uid);// send user id instead of 1
                             </script>
-                            <!-- <li class="list-group-item">
-                                <a href="">Lunch on 1/1/2019</a>
-                            </li>
-
-                            <li class="list-group-item">
-                                <a href="">Breakfast on 2/2/2019</a>
-                            </li> -->
                         </ul>
                     </div>
                 </div>
