test facebook login 2

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <p class="hint-text">Sign in with your social media account</p>
             <div class="social-btn text-center">
 
-                <a href="" id="facebook" class="btn btn-primary btn-lg" title="Facebook"><i class="fa fa-facebook"></i></a>
+                <a href="" onclick="fbLogin()" id="fbLink" class="btn btn-primary btn-lg" title="Facebook"><i class="fa fa-facebook"></i></a>
                 <a href="#" class="btn btn-danger btn-lg" title="Google"><i class="fa fa-google"></i></a>
             </div>
             <div class="or-seperator"><b>or</b></div>
