--- a/pages/Orders.html
+++ b/pages/Orders.html
@@ -24,7 +24,6 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="../Assets/JS/auth.js"></script>
-    <script src="../Assets/JS/browseImage.js"></script>
     <script src="../Assets/JS/nav.js"></script>
     <script src="../Assets/JS/orders.js"></script>
 
@@ -58,7 +57,6 @@
                 <table class="table table-striped table-bordered table-hover table-sm">
                     <thead class="thead-dark">
                         <tr>
-                            <th scope="col">Order Number</th>
                             <th scope="col">Order Type</th>
                             <th scope="col">Resturant</th>
                             <th scope="col">Invited</th>
@@ -67,9 +65,28 @@
                             <th scope="col">Actions</th>
                         </tr>
                     </thead>
-                    <tbody>
+                    <tbody id="showOrders">
                         <script>
-                            addOrderToHtml();
+                            function displayOrders(){
+                                fetch("https://yallanotlobapi.herokuapp.com/users/"+Uid+"/orders",{
+                                    headers: {
+                                        "Content-Type": "application/json",
+                                        "Authorization": access
+                                    }
+                                })
+
+                                .then(function(response) {
+                                    return response.json();
+                                })
+
+                                .then(function(orders) {
+                                    orders.forEach(addOrderToHtml);
+                                })
+                                
+                                .catch(function(error) {
+                                    log('Request failed', error)
+                                });
+                            }                            
                         </script>
                     </tbody>
                 </table>
