--- a/pages/Orders.html
+++ b/pages/Orders.html
@@ -67,26 +67,7 @@
                     </thead>
                     <tbody id="showOrders">
                         <script>
-                            function displayOrders(){
-                                fetch("https://yallanotlobapi.herokuapp.com/users/"+Uid+"/orders",{
-                                    headers: {
-                                        "Content-Type": "application/json",
-                                        "Authorization": access
-                                    }
-                                })
-
-                                .then(function(response) {
-                                    return response.json();
-                                })
-
-                                .then(function(orders) {
-                                    orders.forEach(addOrderToHtml);
-                                })
-                                
-                                .catch(function(error) {
-                                    log('Request failed', error)
-                                });
-                            }                            
+                            displayOrders();    
                         </script>
                     </tbody>
                 </table>
