--- a/index.html
+++ b/index.html
@@ -6,28 +6,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>YallaNotlob</title>
     <div id="headLinks">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="./Assets/stylesheets/main.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="./Assets/stylesheets/bootstrap.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="./Assets/stylesheets/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="./Assets/stylesheets/custom.sass">
-    <link rel="stylesheet" type="text/css" media="screen" href="./Assets/stylesheets/_variables.scss">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
-        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <!-- <script src="./Assets/JS/main.js"></script> -->
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" type="text/css" media="screen" href="../Assets/stylesheets/main.css">
+        <link rel="stylesheet" type="text/css" media="screen" href="../Assets/stylesheets/bootstrap.css">
+        <link rel="stylesheet" type="text/css" media="screen" href="../Assets/stylesheets/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" media="screen" href="../Assets/stylesheets/custom.sass">
+        <link rel="stylesheet" type="text/css" media="screen" href="../Assets/stylesheets/_variables.scss">
+        <link rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+            integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 
-    <script src="./Assets/JS/notification.js"></script>
-</div>
+        <!-- gmail login -->
+        <!-- <script src="https://apis.google.com/js/client:platform.js?onload=renderButton" async defer></script> -->
+        <script src="https://apis.google.com/js/platform.js" async defer></script>
+        <meta name="google-signin-scope" content="profile email">
+        <meta name="google-signin-client_id"
+            content="791903473675-ujan66vn97e2ebkgqssu35uvv4elp6vs.apps.googleusercontent.com">
+
+
+        <script src="../Assets/JS/notification.js"></script>
+    </div>
 </head>
 
 <header>
@@ -47,7 +55,7 @@
                     <a class="nav-link" href="login.html">LogIn</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " href="./pages/signup.html">SignUp</a>
+                    <a class="nav-link " href="./signup.html">SignUp</a>
                 </li>
             </ul>
 
@@ -65,10 +73,10 @@
             <div id="alert"></div>
 
             <p class="hint-text">Sign in with your social media account</p>
-            <div class="social-btn text-center">
+            <div class="social-btn text-center padd">
 
-                <a href="" onclick="fbLogin()" id="fbLink" class="btn btn-primary btn-lg" title="Facebook"><i class="fa fa-facebook"></i></a>
-                <a href="#" class="btn btn-danger btn-lg" title="Google"><i class="fa fa-google"></i></a>
+                <a id="fbLink" class="btn fbbtn" onclick="fbLogin()" title="Facebook" style="display:inline-block; border-radius: unset;"><i class="fa fa-facebook"></i>  Facebook</a>
+                <div data-onsuccess="onSignIn" id="signIn" class="btn g-signin2" title="Google"></div>
             </div>
             <div class="or-seperator"><b>or</b></div>
 
@@ -84,24 +92,19 @@
                 <button type="button" id="login_btn" class="btn btn-success btn-lg btn-block signup-btn">Sign
                     in</button>
             </div>
+
             <div class="text-center small"><a href="#">Forgot Your password?</a></div>
             <div class="or-seperator"></div>
 
-            <!-- delete later -->
-                        <!-- Display login status -->
-<div id="status"></div>
-
-<!-- Display user profile data -->
-<div id="userData"></div>
-
-            <div class="text-center small">Don't have an account? <a href="./pages/signup.html">Sign up</a></div>
+            <div class="text-center small">Don't have an account? <a href="./signup.html">Sign up</a></div>
 
         </form>
     </div>
 </section>
 
 <script src="./Assets/JS/login.js"></script>
-<script src="./Assets/JS/facebook.js"></script>
+<!-- <script src="./Assets/JS/facebook.js"></script> -->
+<script src="./Assets/JS/gmail.js"></script>
 </body>
 
 </html>
