--- a/Orders.html
+++ b/Orders.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" media="screen" href="../Assets/stylesheets/bootstrap.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="../Assets/stylesheets/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="../Assets/stylesheets/main.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="./Assets/stylesheets/bootstrap.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="./Assets/stylesheets/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="./Assets/stylesheets/main.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round|Open+Sans">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
@@ -23,9 +23,9 @@
         crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="../Assets/JS/auth.js"></script>
-    <script src="../Assets/JS/nav.js"></script>
-    <script src="../Assets/JS/orders.js"></script>
+    <script src="./Assets/JS/auth.js"></script>
+    <script src="./Assets/JS/nav.js"></script>
+    <script src="./Assets/JS/orders.js"></script>
 
     <title>Orders</title>
 </head>
