--- a/orderdetails.html
+++ b/orderdetails.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>YallaNotlob</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="../Assets/stylesheets/main.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="../Assets/stylesheets/bootstrap.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="../Assets/stylesheets/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="../Assets/stylesheets/custom.sass">
-    <link rel="stylesheet" type="text/css" media="screen" href="../Assets/stylesheets/_variables.scss">
+    <link rel="stylesheet" type="text/css" media="screen" href="./Assets/stylesheets/main.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="./Assets/stylesheets/bootstrap.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="./Assets/stylesheets/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="./Assets/stylesheets/custom.sass">
+    <link rel="stylesheet" type="text/css" media="screen" href="./Assets/stylesheets/_variables.scss">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
@@ -28,9 +28,9 @@
         crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="../Assets/JS/auth.js"></script>
-    <script src="../Assets/JS/nav.js"></script>
-    <script src="../Assets/JS/orderDetails.js"></script>
+    <script src="./Assets/JS/auth.js"></script>
+    <script src="./Assets/JS/nav.js"></script>
+    <script src="./Assets/JS/orderDetails.js"></script>
 
 </head>
 
