--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <ul class="nav navbar-nav navbar-right profile">
 
                 <li class="nav-item">
-                    <a class="nav-link" href="login.html">LogIn</a>
+                    <a class="nav-link" href="index.html">LogIn</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link " href="./signup.html">SignUp</a>
