--- a/signup.html
+++ b/signup.html
@@ -40,7 +40,7 @@
             <ul class="nav navbar-nav navbar-right profile">
 
                 <li class="nav-item">
-                    <a class="nav-link" href="login.html">LogIn</a>
+                    <a class="nav-link" href="index.html">LogIn</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link " href="signup.html">SignUp</a>
@@ -80,7 +80,7 @@
                 <button type="button" id="submit_btn" class="btn btn-success btn-lg btn-block signup-btn">Sign
                     Up</button>
             </div>
-            <div class="text-center small">Already have an account? <a href="login.html">LogIn</a></div>
+            <div class="text-center small">Already have an account? <a href="index.html">LogIn</a></div>
 
         </form>
     </div>
