--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>YallaNotlob</title>
     <div id="headLinks">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" media="screen" href="../Assets/stylesheets/main.css">
-        <link rel="stylesheet" type="text/css" media="screen" href="../Assets/stylesheets/bootstrap.css">
-        <link rel="stylesheet" type="text/css" media="screen" href="../Assets/stylesheets/bootstrap.min.css">
-        <link rel="stylesheet" type="text/css" media="screen" href="../Assets/stylesheets/custom.sass">
-        <link rel="stylesheet" type="text/css" media="screen" href="../Assets/stylesheets/_variables.scss">
+        <link rel="stylesheet" type="text/css" media="screen" href="./Assets/stylesheets/main.css">
+        <link rel="stylesheet" type="text/css" media="screen" href="./Assets/stylesheets/bootstrap.css">
+        <link rel="stylesheet" type="text/css" media="screen" href="./Assets/stylesheets/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" media="screen" href="./Assets/stylesheets/custom.sass">
+        <link rel="stylesheet" type="text/css" media="screen" href="./Assets/stylesheets/_variables.scss">
         <link rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
@@ -34,7 +34,7 @@
             content="791903473675-ujan66vn97e2ebkgqssu35uvv4elp6vs.apps.googleusercontent.com">
 
 
-        <script src="../Assets/JS/notification.js"></script>
+        <script src="./Assets/JS/notification.js"></script>
     </div>
 </head>
 
@@ -55,7 +55,7 @@
                     <a class="nav-link" href="index.html">LogIn</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " href="./signup.html">SignUp</a>
+                    <a class="nav-link " href="/signup.html">SignUp</a>
                 </li>
             </ul>
 
