--- a/orderdetails.html
+++ b/orderdetails.html
@@ -80,8 +80,8 @@
                                 <div class="modal-content">
                                     <div class="modal-header">
                                         <h3 class="modal-title" id="exampleModalLongTitle">Friends Invited</h3>
-                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                            <span aria-hidden="true">&times;</span>
+                                        <button type="button" class="close" >
+                                            <span >&times;</span>
                                         </button>
                                     </div>
                                     <div class="modal-body">
@@ -117,7 +117,7 @@
                                     <div class="modal-header">
                                         <h3 class="modal-title" id="exampleModalLongTitle">Friends who accepted</h3>
                                         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                            <span aria-hidden="true">&times;</span>
+                                            <span>&times;</span>
                                         </button>
                                     </div>
                                     <div class="modal-body">
