--- a/submitNewPassWord.html
+++ b/submitNewPassWord.html
@@ -32,8 +32,6 @@
         <meta name="google-signin-scope" content="profile email">
         <meta name="google-signin-client_id"
             content="791903473675-ujan66vn97e2ebkgqssu35uvv4elp6vs.apps.googleusercontent.com">
-
-
         <script src="./Assets/JS/notification.js"></script>
     </div>
 </head>
@@ -69,42 +67,17 @@
 
     <div class="signin-form">
         <form>
-            <h2>Sign in</h2>
-            <div id="alert"></div>
-
-            <p class="hint-text">Sign in with your social media account</p>
-            <div class="social-btn text-center padd">
-
-                <a id="fbLink" class="btn fbbtn" onclick="fbLogin()" title="Facebook" style="display:inline-block; border-radius: unset;"><i class="fa fa-facebook"></i>  Facebook</a>
-                <div data-onsuccess="onSignIn" id="signIn" class="btn g-signin2" title="Google"></div>
-            </div>
-            <div class="or-seperator"><b>or</b></div>
-
-            <div class="form-group">
-                <input type="email" class="form-control input-lg" name="email" id="email"
-                    placeholder="Enter Your E-mail" required="required">
-            </div>
+            <p class="hint-text">Enter your new password</p>
             <div class="form-group">
                 <input type="password" class="form-control input-lg" name="password" id="password"
                     placeholder="Password" required="required">
             </div>
             <div class="form-group">
-                <button type="button" id="login_btn" class="btn btn-success btn-lg btn-block signup-btn">Sign
-                    in</button>
+                <button type="button" id="submitNewPassWord" class="btn btn-success btn-lg btn-block signup-btn">Submit</button>
             </div>
-
-            <div class="text-center small"><a href="submitMail.html">Forgot Your password?</a></div>
-            <div class="or-seperator"></div>
-
-            <div class="text-center small">Don't have an account? <a href="./signup.html">Sign up</a></div>
-
         </form>
     </div>
 </section>
-
-<script src="./Assets/JS/login.js"></script>
-<!-- <script src="./Assets/JS/facebook.js"></script> -->
-<script src="./Assets/JS/gmail.js"></script>
+<script src="./Assets/JS/forgetPassWord.js"></script>
 </body>
-
 </html>
